--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Welcome to My Website!</h1>
-  <p>This is some content on my website.</p>
+  <p>This is some content on my website from the master branch.</p>
   <img src="image.jpg" alt="Image description">
   
   </body>
