--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website Title</title>
+  <title>Restaurant Menu</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Website!</h1>
-  <p>This is some content on my website from the master branch.</p>
-  <img src="image.jpg" alt="Image description">
-  
-  </body>
+  <header>
+    <h1>[Restaurant Name]</h1>
+  </header>
+
+  <main>
+    <h2>Our Menu</h2>
+    <section class="menu-category">
+      <h3>Appetizers</h3>
+      <ul>
+        <li>Bruschetta - Toasted bread with tomatoes, basil, garlic, and herbs ($8.99)</li>
+        <li>Calamari - Lightly fried squid with marinara sauce ($10.50)</li>
+        <li>Spinach Dip - Creamy spinach and artichoke dip with pita bread ($7.99)</li>
+      </ul>
+    </section>
+
+    <section class="menu-category">
+      <h3>Entrees</h3>
+      <ul>
+        <li>Chicken Parmesan - Breaded chicken breast with marinara sauce and mozzarella cheese ($18.99)</li>
+        <li>New York Strip Steak - Grilled steak with your choice of sides ($24.99)</li>
+        <li>Penne Pasta Primavera - Fresh vegetables tossed in a light cream sauce ($15.99)</li>
+      </ul>
+    </section>
+
+    </main>
+
+</body>
 </html>
