--- a/index.html
+++ b/index.html
@@ -1,5 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>¡Buen Provecho! - Authentic Mexican Cuisine</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header>
+    <h1>¡Buen Provecho!</h1>
+    <h2>Authentic Mexican Cuisine</h2>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#appetizers">Appetizers</a></li>
+      <li><a href="#entrees">Entrees</a></li>
+      <li><a href="#drinks">Drinks</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="appetizers">
+      <h2>Appetizers</h2>
+      <ul>
+        <li>Chips and Salsa - Fresh corn tortilla chips with our homemade salsa. ($3.00)</li>
+        <li>Guacamole - Creamy avocado dip with a touch of lime and spices. ($6.00)</li>
+        <li>Queso Fundido - Melted Oaxaca cheese with chorizo and poblano peppers. ($8.00)</li>
+        <li>Nachos - Our signature dish! Loaded with chips, cheese, beans, meat, and all the fixings. (Prices vary)</li>
+      </ul>
+    </section>
+
+    <section id="entrees">
+      <h2>Entrees</h2>
+      <ul>
+        <li>Tacos - Choose your protein (chicken, steak, carnitas, al pastor) and enjoy them on corn tortillas with onions, cilantro, and your choice of salsa. ($2.50 each)</li>
+        <li>Burritos - Flour tortillas filled with rice, beans, your choice of protein, cheese, lettuce, tomato, and sour cream. ($10.00)</li>
+        <li>Enchiladas - Corn tortillas rolled with your choice of filling (cheese, chicken, beef) and topped with our signature red sauce. ($12.00)</li>
+        <li>Fajitas - Sizzling strips of chicken, steak, or shrimp served with onions, peppers, and tortillas. ($14.00)</li>
+      </ul>
+    </section>
+
+    <section id="drinks">
+      <h2>Drinks</h2>
+      <ul>
+        <li>Jarritos - Mexican soda in various flavors. ($2.00)</li>
+        <li>Horchata - A refreshing rice milk drink with cinnamon. ($3.00)</li>
+        <li>Margaritas - Frozen or on the rocks, classic or flavored. ($6.00)</li>
+        <li>Sangria - A red wine punch with fruit. ($8.00)</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; ¡Buen Provecho! 2024</p>
+  </footer>
+</body>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,4 +70,5 @@
   <img src="image.jpg" alt="Image description">
   
   </body>
+
 </html>
